@@ -1,3 +1,4 @@
+* remove set_bit/clear_bit functions in favor of using enum.IntFlag
 * use plain pytest in the CI integration (no code change in the package)
 * remove build_doc target for setup.py, use sphinx (see builddocs pipeline)
 
